# AIFinancialCrime

./: .gitignore  HANDOVER.md  JOURNAL.md  README.md  main.py  pyproject.toml
.claude/: launch.json
Cases/: AIFC-20260314-9JVZ.json
data/: manual_attributions.example.json
docs/: architecture.md  data_quality.md  eval_framework.md  optimization_loop.md  pattern_detection.md  risk_methodology.md
eval/: data_quality_policy.default.json  data_quality_report.json  gold_labels.example.jsonl  regression_policy.default.json
frontend/: index.html  intake.html
monitoring/: alerts.yml  prometheus.yml
scripts/: generate_case_report.py  ingest_tx.py  opensanctions_bulk_ingester.py  run_api.sh  run_attribution_ingest.sh  run_bulk_attribution_import.py  run_data_quality.sh  run_eval.sh  run_ingest.sh  run_queries.sh  run_regression.sh  setup_pi.sh  sync_all.sh  sync_outputs.sh  system_update.sh
sql/: 000_migration_log.sql  001_init.sql  002_attribution.sql  003_fraud_investigations.sql  004_api_keys.sql  005_cio_clusters.sql  006_cases.sql  007_serial_actors.sql  008_seed_exchange_addresses.sql
src/afci/: __init__.py  config.py
src/aifinancialcrime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/api/: auth.py  auth_integration.py  fraud_report.py  health.py  report_endpoint.py  report_helpers.py  report_trace_helpers.py  report_tx_helpers.py
src/core/: cache.py  logging_config.py  metrics.py
src/investigation/: adapters.py  adapters_v2.py  (+26 more)
tests/: e2e_test.py  test_cio_engine.py  test_confidence_engine.py  test_exchange_intel_integration.py
(+20 files in other folders)
