[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aifinancialcrime"
version = "0.1.0"
description = "Financial Crime Intelligence Platform - core skeleton"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "requests>=2.32.0",
  "psycopg[binary]>=3.2.0"
]

[tool.setuptools.packages.find]
where = ["src"]
